--- a/css/custom.css
+++ b/css/custom.css
@@ -285,6 +285,43 @@ ul{
     }
 }
 
+.modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(205, 205, 205, 0.4);
+  }
+  
+  .modal-content {
+    background-color: #ca8102;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #ca8102;
+    width: 50%;
+  }
+  
+  .modal-content h1, .modal-content p {
+    text-align: center;
+  }
+
+  .close {
+    color: #e0e0e0;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
 
 #lista-cafe .row {
     margin-bottom: 20px;
